# jsonSimplify

./: .gitignore  CMakeLists.txt
include/: json.hpp  json_array.hpp  json_element.hpp  json_object.hpp  json_simplify.hpp  json_value.hpp
src/: json.cpp  json_array.cpp  json_element.cpp  json_object.cpp  json_simplify.cpp  json_value.cpp
tests/: CMakeLists.txt  test_01.cpp  test_01f.cpp  test_02.cpp  test_02f.cpp  test_03.cpp  test_03f.cpp  test_04.cpp  test_05.cpp  test_06.cpp  test_07.cpp  test_08.cpp
tests/cases/: test01.txt  test02.txt  test03.txt  test03f.txt  test04.txt
